--- a/.github/workflows/bootstrap-backend.yaml
+++ b/.github/workflows/bootstrap-backend.yaml
@@ -1,1 +1,36 @@
 # Workflow to provision S3 and DynamoDB
+
+name: Bootstrap Terraform Backend
+
+on:
+  workflow_dispatch:
+
+jobs:
+  bootstrap:
+    runs-on: ubuntu-latest
+    env:
+      AWS_REGION: us-east-2
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.0
+
+      - name: Terraform Init
+        working-directory: ./bootstrap-backend
+        run: terraform init
+
+      - name: Terraform Apply
+        working-directory: ./bootstrap-backend
+        run: terraform apply -auto-approve
